BUGFIX corrected the bottom-margin for wrapped buttons

--- a/src/index.css
+++ b/src/index.css
@@ -245,7 +245,7 @@ button:focus.choosen:after {
 }
 
 .buttonRow button{
-  margin: var(--basis) calc(var(--basis) * 1.5) 0 0;
+  margin: var(--basis) calc(var(--basis) * 1.5) calc(var(--basis) * .5) 0;
 }
 .buttonRow button:last-of-type{
   margin-right: 0;
